<resources>
    <string name="app_name">Oliver</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_location_key">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_summary">Weather report for this location</string>
    <string name="pref_location_default">prague</string>

    <string name="pref_unit_default">metric</string>
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_title">Unit</string>
    <string name="pref_unit_summary">Pick Your unit.</string>

</resources>
